--- a/frontend/src/app/admin/employees/list.component.html
+++ b/frontend/src/app/admin/employees/list.component.html
@@ -46,6 +46,11 @@
                                 </a>
                                 <a routerLink="transfer/{{employee.id}}" class="btn btn-sm btn-warning me-1">Transfer</a>
                                 <a routerLink="edit/{{employee.id}}" class="btn btn-sm btn-primary me-1">Edit</a>
+                                <button (click)="deleteEmployee(employee.id)" class="btn btn-sm btn-danger" 
+                                    [disabled]="employee.isDeleting">
+                                    <span *ngIf="employee.isDeleting" class="spinner-border spinner-border-sm"></span>
+                                    <span *ngIf="!employee.isDeleting"><i class="fas fa-trash"></i> Delete</span>
+                                </button>
                             </div>
                         </td>
                     </tr>
